# i-dreamed-of-feeling-better

./: .gitmodules  CMakeLists.txt  README.md  compile_commands.json  debug_notes.md
assets/shaders/: sprite.frag  sprite.vert
assets/sprites/vriska/: vriska.ase  vriska.json
cmake/: FindSDL2_Image.cmake
include/: component.h  input.h  renderer.h  resource_manager.h  resources.h  system.h
include/components/: animation.h  animations.h  animator.h  camera.h  component_defs.h  player.h  sprite.h  transform.h
include/ecs/: component.h  ecs.h  entity.h  event_bus.h  system.h
include/renderer/: rect.h  renderer.h  shader.h  texture.h
include/systems/: system_animation.h  system_defs.h  system_movement.h  system_render.h
include/util/: hash.h
src/: CMakeLists.txt  component.c  component_defs.c  ecs.c  entity.c  input.c  main.c  main_old.c  renderer.c  resource_manager.c  shader.c  system_render.c
src/ecs/: component.c  ecs.c  entity.c  event_bus.c
src/renderer/: renderer.c  shader.c  texture.c
src/resources/: resources.c
src/systems/: system_animation.c  system_defs.c  system_movement.c  system_render.c
src/util/: hash.c
